@@ -3,6 +3,9 @@
 (2007-09-23)
  * Updated the Romanian translation.
  * Added *.ra to the list of audio files. This fixes bug #1799930.
+ * Translated into Spanish the help texts I took from the mplayer manpage
+   (in fact I've just took the translations from the Spanish translation of 
+   the manpage)
 
 (2007-09-20)
  * Updated the Ukrainian translation.
